# quasi1d

./: CMakeLists.txt  Doxyfile  README.md  gitignore  main.cpp  makefile  plot.py  quasi1d.code-workspace  space.cpp  space.hpp  time.cpp  time.hpp
documentation/: annotated.html  classMesh-members.html  classMesh.html  classMesh__coll__graph.dot  classMesh__coll__graph.map  classMesh__coll__graph.md5  classSolver-members.html  classSolver.html  classSolver__coll__graph.dot  classSolver__coll__graph.map  classSolver__coll__graph.md5  classes.html  classflow-members.html  classflow.html  classflow__coll__graph.dot  classflow__coll__graph.map  classflow__coll__graph.md5  classflow__inherit__graph.dot  classflow__inherit__graph.map  classflow__inherit__graph.md5  classflux-members.html  classflux.html  classflux__coll__graph.dot  classflux__coll__graph.map  classflux__coll__graph.md5  classflux__inherit__graph.dot  classflux__inherit__graph.map  classflux__inherit__graph.md5  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_2.dot  (+11 more)
documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  variables_13.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+8 more)
